--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -158,6 +158,10 @@ nav > ul {
 }
 
 @media only screen and (max-width: 768px) {
+  nav {
+    height: 100%;
+    box-shadow: none;
+  }
   nav > ul {
     flex-direction: column;
     width: 100%;
@@ -175,7 +179,7 @@ nav > ul {
   .products-menu > li, .user-menu > li {
     padding-right: 0;
     margin-bottom: 1px;
-    border: 1px solid #333333;
+    border: 1px solid rgba(51, 51, 51, 0.2);
     border-radius: 10px;
   }
 
@@ -185,6 +189,7 @@ nav > ul {
 
   .produtos-list {
     margin-top: 2px;
+    margin-left: 0;
   }
   
 
